# webrtc-noise-gain

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.alpine  Dockerfile.armv6  Dockerfile.armv7  MANIFEST.in  Makefile  README.md  pyproject.toml  python.cpp  setup.py  test.py
.github/workflows/: test.yml  wheels.yml
tests/: test_audio_processor.py
webrtc-audio-processing/: .gitignore  .gitlab-ci.yml  README.md  RELEASING.md  UPDATING.md  meson.build  meson_options.txt
webrtc-audio-processing/subprojects/: abseil-cpp.wrap
webrtc-audio-processing/subprojects/abseil-cpp-20230125.1/: .meson-subproject-wrap-hash.txt
webrtc-audio-processing/subprojects/abseil-cpp-20230125.1/absl/base/: options.h
webrtc-audio-processing/webrtc-audio-processing-1/common_audio/: fir_filter_factory.cc
webrtc-audio-processing/webrtc-audio-processing-1/common_audio/resampler/: sinc_resampler.cc
webrtc-audio-processing/webrtc-audio-processing-1/modules/audio_processing/aec3/: adaptive_fir_filter.cc  adaptive_fir_filter_erl.cc  fft_data.h  matched_filter.cc  vector_math.h
webrtc-audio-processing/webrtc-audio-processing-1/rtc_base/: platform_thread_types.cc
webrtc-audio-processing/webrtc-audio-processing-1/rtc_base/system/: arch.h  file_wrapper.h
webrtc_noise_gain/: __init__.py  __main__.py
